--- a/MVCUploadFileAngular/package.json
+++ b/MVCUploadFileAngular/package.json
@@ -23,11 +23,13 @@
     "css-loader": "^0.23.0",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.9.1",
+    "file-loader": "^0.8.4",
     "gulp-livereload": "^3.8.1",
     "gulp-util": "^3.0.7",
     "imports-loader": "^0.6.5",
     "ng-annotate-loader": "0.0.10",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.6"
   },
   "devDependencies": {
